--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brisseida Flores - Rosas Eternas de Papel</title>
+    <title>Brisseila Flores - Rosas Eternas de Papel</title>
     <style>
         /* Estilos Generales */
         :root {
@@ -364,22 +364,22 @@
         </div>
     </section>
 
-    ---
     <section id="contacto" class="contact">
-        <div class="container">
-            <h2>Contacto</h2>
-            <p>¿Interesado en mis creaciones o tienes alguna pregunta?</p>
-            <div class="contact-info">
-                <p><strong>Teléfono:</strong> <a href="tel:+59167295628">+591 67295628</a></p>
-                <p><strong>Correo:</strong> <a href="brisseilafloreschilo@gmail.com.com">brisseilafloreschilo@gmail.com</a></p>
-            </div>
-            <div class="social-links">
-                <p>Sígueme en redes sociales:</p>
-                <a href="#" target="_blank">Instagram</a>
-                <a href="#" target="_blank">Facebook</a>    
-            </div>
+    <div class="container">
+        <h2>Contacto</h2>
+        <p>¿Interesado en mis creaciones o tienes alguna pregunta?</p>
+        <div class="contact-info">
+            <p><strong>Teléfono:</strong> <a href="tel:+59167295628">+591 67295628</a></p>
+            <p><strong>Correo:</strong> <a href="mailto:brisseilafloreschilo@gmail.com">brisseilafloreschilo@gmail.com</a></p>
+            <p><strong>WhatsApp:</strong> <a href="https://wa.me/59167295628" target="_blank">+591 67295628</a></p>
         </div>
-    </section>
+        <div class="social-links">
+            <p>Sígueme en redes sociales:</p>
+            <a href="https://www.instagram.com/brisseilaflores.eternas/" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/brisseila.fores.chilo" target="_blank">Facebook</a>    
+        </div>
+    </div>
+</section>
 
     <footer>
         <div class="container">
