--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Brisseila Flores Chilo - Rosas Eternas de Papel. Todos los derechos reservados.</p>
+            <p>&copy; 2025 CARLOS DANIEL Flores Chilo - Rosas Eternas de Papel. Todos los derechos reservados.</p>
         </div>
     </footer>
 </body>
