--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                     <img src="Foto11.jpg" alt="Ramo Hot Wheels Premium">
                     <h3>Ramo Premium</h3>
                     <p>Ramo con camisetas de futbol de tu equipo favorito  edición especial y rosas de lujo.</p>
-                    <p class="price">Precio: $75.00</p>
+                    <p class="price">Precio: 180 bs</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Foto12.jpg" alt="Colección Hot Wheels Grande">
@@ -493,4 +493,5 @@
         </div>
     </footer>
 </body>
+
 
