--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     <img src="Foto5.jpg" alt="Ramo Hot Wheels Clásico">
                     <h3>Ramo de 5 Autos</h3>
                     <p>Un clásico con cinco autos Hot Wheels y rosas eternas. ¡Ideal para el fanático de los coches!</p>
-                    <p class="price">Precio: $40.00</p>
+                    <p class="price">Precio: 65 Bs</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Foto6.jpg" alt="Ramo Hot Wheels con dulces">
@@ -413,25 +413,25 @@
                     <img src="Foto8.jpg" alt="Ramo Hot Wheels Clásico 2">
                     <h3>Ramo de 10 Autos</h3>
                     <p>Un ramo más grande con diez autos Hot Wheels para los coleccionistas.</p>
-                    <p class="price">Precio: $65.00</p>
+                    <p class="price">Precio: Cotizar</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Foto10.jpg" alt="Arreglo Hot Wheels en caja">
                     <h3>Arreglo en Caja</h3>
                     <p>Autos y rosas en una elegante caja, ideal para un regalo especial.</p>
-                    <p class="price">Precio: $55.00</p>
+                    <p class="price">Precio: Cotizar</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Foto9.jpg" alt="Ramo de Hot Wheels con luces">
                     <h3>Ramo con Luces LED</h3>
                     <p>Un toque extra de magia con luces incorporadas para un regalo espectacular.</p>
-                    <p class="price">Precio: $50.00</p>
+                    <p class="price">Precio: Consultar</p>
                 </div>
                  <div class="gallery-item">
                     <img src="Foto11.jpg" alt="Ramo Hot Wheels Premium">
                     <h3>Ramo Premium</h3>
                     <p>Ramo con camisetas de futbol de tu equipo favorito  edición especial y rosas de lujo.</p>
-                    <p class="price">Precio: 180 bs</p>
+                    <p class="price">Precio: 180 Bs</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Foto12.jpg" alt="Colección Hot Wheels Grande">
@@ -452,19 +452,19 @@
                     <img src="Foto13.jpg" alt="Ramo de rosas naturales">
                     <h3>Ramo de Rosas Rojas</h3>
                     <p>Un clásico atemporal para celebrar el amor y la pasión.</p>
-                    <p class="price">Precio: $50.00</p>
+                    <p class="price">Precio: Consultar</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Foto14.jpg" alt="Ramo mixto de flores naturales">
                     <h3>Ramo de Lirios y Rosas</h3>
                     <p>Una combinación elegante de flores para cualquier ocasión.</p>
-                    <p class="price">Precio: $60.00</p>
+                    <p class="price">Precio: Consultar</p>
                 </div>
                 <div class="gallery-item">
                     <img src="Foto15.jpg" alt="Bouquet de flores de campo">
                     <h3>Bouquet de Flores de Campo</h3>
                     <p>Un arreglo rústico y encantador, con la frescura del campo.</p>
-                    <p class="price">Precio: $45.00</p>
+                    <p class="price">Precio: Consultar</p>
                 </div>
             </div>
         </div>
@@ -493,5 +493,6 @@
         </div>
     </footer>
 </body>
+
 
 
