--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Brisseila Flores - Rosas Eternas de Papel</title>
+<title>Rosas Eternas de Papel - Brisseila Flores</title>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
@@ -80,7 +80,8 @@ body {
 
 /* HERO */
 .hero-section {
-  background: var(--primary-color);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+              url('fotos/hero-bg.jpg') no-repeat center center/cover;
   color: white;
   text-align: center;
   padding: 3rem 1rem;
@@ -281,16 +282,18 @@ h2 {
 
 <section class="hero-section" id="inicio">
   <h2>Rosas Eternas Hechas con Amor</h2>
-  <p>Detalles que duran para siempre — hechos a mano con dedicación.</p>
+  <p>Detalles únicos, hechos a mano, que duran para siempre.</p>
   <a href="#productos" class="btn primary-btn">Ver Productos</a>
 </section>
 
 <section id="nosotros" class="bg-light">
   <div class="about-info container">
-    <img src="tu-foto.jpg" alt="Brisseila Flores" class="profile-image">
+    <img src="fotos/brisseila-flores.jpg" alt="Brisseila Flores" class="profile-image">
     <div>
       <h2>Sobre mí</h2>
-      <p>Hola, soy Brisseila Flores, y elaboro rosas eternas hechas completamente a mano con papel de alta calidad. Cada pieza es única, pensada para transmitir cariño, elegancia y durabilidad.</p>
+      <p>Hola, soy <strong>Brisseila Flores</strong>, creadora de <em>Rosas Eternas de Papel</em>.  
+      Elaboro rosas totalmente a mano con materiales de alta calidad.  
+      Cada flor representa amor, arte y dedicación. Mi objetivo es crear un detalle que perdure con el tiempo, ideal para regalar o decorar con estilo y elegancia.</p>
     </div>
   </div>
 </section>
@@ -300,16 +303,22 @@ h2 {
     <h2>Mis Productos</h2>
     <div class="gallery-grid">
       <div class="product-item">
-        <img src="rosa1.jpg" alt="Rosa roja">
+        <img src="fotos/rosa-roja.jpg" alt="Rosa Roja">
         <h3>Rosa Roja</h3>
-        <p>Ideal para regalos románticos o decoraciones.</p>
+        <p>Un clásico símbolo de amor eterno. Perfecta para ocasiones especiales.</p>
         <p class="price-tag">Bs 25</p>
       </div>
       <div class="product-item">
-        <img src="rosa2.jpg" alt="Rosa blanca">
+        <img src="fotos/rosa-blanca.jpg" alt="Rosa Blanca">
         <h3>Rosa Blanca</h3>
-        <p>Simboliza pureza y elegancia eterna.</p>
+        <p>Simboliza pureza y paz, ideal para regalar a alguien especial.</p>
         <p class="price-tag">Bs 25</p>
+      </div>
+      <div class="product-item">
+        <img src="fotos/rosa-azul.jpg" alt="Rosa Azul">
+        <h3>Rosa Azul</h3>
+        <p>Original y elegante, para quienes buscan algo diferente.</p>
+        <p class="price-tag">Bs 30</p>
       </div>
     </div>
   </div>
@@ -321,26 +330,32 @@ h2 {
     <div class="contact-grid">
       <div class="contact-item">
         <strong>WhatsApp:</strong>
-        <a href="https://wa.me/591XXXXXXXXX" class="whatsapp-link">+591 XXXXXXXX</a>
+        <a href="https://wa.me/59175398790" class="whatsapp-link">+591 75398790</a>
       </div>
       <div class="contact-item">
         <strong>Email:</strong>
-        <a href="mailto:tuemail@gmail.com" class="contact-link">tuemail@gmail.com</a>
+        <a href="mailto:brisseilaflores@gmail.com" class="contact-link">brisseilaflores@gmail.com</a>
+      </div>
+      <div class="contact-item">
+        <strong>Ubicación:</strong>
+        <p>Santa Cruz de la Sierra, Bolivia 🇧🇴</p>
       </div>
     </div>
     <div class="social-links-container">
-      <a href="#" class="social-link instagram">Instagram</a>
-      <a href="#" class="social-link facebook">Facebook</a>
+      <a href="https://www.instagram.com/rosaseternasdepapel" target="_blank" class="social-link instagram">Instagram</a>
+      <a href="https://www.facebook.com/rosaseternasdepapel" target="_blank" class="social-link facebook">Facebook</a>
     </div>
   </div>
 </section>
 
 <footer class="main-footer">
-  <p>© 2025 Rosas Eternas de Papel — Creado por Brisseila Flores</p>
+  <p>© 2025 Rosas Eternas de Papel — Creado con 💖 por Brisseila Flores</p>
 </footer>
 
 </body>
 </html>
+
+
 
 
 
