--- a/deepseek_html_20251005_707ec3.html
+++ b/deepseek_html_20251005_707ec3.html
@@ -499,7 +499,7 @@
         <div class="container">
             <h2 class="section-title">Sobre Mí</h2>
             <div class="about-content">
-                <div class="about-img">
+                <div class="Perfil.JPG">
                     <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80" alt="Brisseila Flores Chilo">
                 </div>
                 <div class="about-text">
