--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <div class="product-grid">
                 
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x250/B17D7D/F7EFEF?text=Rosa+Roja+Apasionada" alt="Rosa Roja Apasionada">
+                    <img src= Foto7.jpg alt="Rosa Roja Apasionada">
                     <div class="product-info">
                         <h3>Rosa Eterna Roja Clásica</h3>
                         <p>El símbolo atemporal del amor y la pasión. Perfecta para expresar tus sentimientos más profundos.</p>
@@ -507,7 +507,7 @@
                 </div>
 
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x250/C29A9A/5A2D2D?text=Rosa+Blanca+Pura" alt="Rosa Blanca Pura">
+                    <img src= Foto8.jpg alt="Rosa Blanca Pura">
                     <div class="product-info">
                         <h3>Rosa Eterna Blanca Pura</h3>
                         <p>Elegancia y pureza en su máxima expresión. Ideal para celebrar la inocencia y los nuevos comienzos.</p>
@@ -517,7 +517,7 @@
                 </div>
 
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x250/DCC5C5/5A2D2D?text=Rosa+Rosada+Delicada" alt="Rosa Rosada Delicada">
+                    <img src= Foto9.jpg alt="Rosa Rosada Delicada">
                     <div class="product-info">
                         <h3>Rosa Eterna Rosada Delicada</h3>
                         <p>Un toque de dulzura y admiración. Ideal para expresar cariño y gratitud.</p>
@@ -527,7 +527,7 @@
                 </div>
 
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x250/E8D9D9/5A2D2D?text=Rosa+Azul+Misteriosa" alt="Rosa Azul Misteriosa">
+                    <img src= Foto10.jpg alt="Rosa Azul Misteriosa">
                     <div class="product-info">
                         <h3>Rosa Eterna Azul Misteriosa</h3>
                         <p>La rareza y el encanto de una flor de cuento de hadas. Para quienes aprecian lo único.</p>
@@ -537,7 +537,7 @@
                 </div>
 
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x250/D3BABA/5A2D2D?text=Caja+de+3+Rosas+Mixtas" alt="Caja de 3 Rosas Mixtas">
+                    <img src= Foto11.jpg alt="Caja de 3 Rosas Mixtas">
                     <div class="product-info">
                         <h3>Caja de 3 Rosas Mixtas</h3>
                         <p>Una combinación perfecta de colores para un regalo especial y significativo.</p>
@@ -547,7 +547,7 @@
                 </div>
 
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/400x250/B89797/F7EFEF?text=Caja+Corazón+Rosa+Única" alt="Caja Corazón Rosa Única">
+                    <img src= Foto12.jpg alt="Caja Corazón Rosa Única">
                     <div class="product-info">
                         <h3>Caja Corazón con Rosa Única</h3>
                         <p>Un detalle romántico y elegante presentado en una hermosa caja en forma de corazón.</p>
@@ -572,7 +572,7 @@
                     </svg>
                 </a>
                 
-                <a href="https://www.facebook.com/tu_cuenta_de_facebook" target="_blank" aria-label="Facebook">
+                <a href= https://www.facebook.com/profile.php?id=61580130876879 target="_blank" aria-label="Facebook">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 512 512">
                         <path fill="currentColor" d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"/>
                     </svg>
