--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                     <div class="product-info">
                         <h3>Rosa Eterna Roja Clásica</h3>
                         <p>El símbolo atemporal del amor y la pasión. Perfecta para expresar tus sentimientos más profundos.</p>
-                        <div class="price">$35.00</div>
+                        <div class="price">200 Bs</div>
                         <a href="#" class="add-to-cart">Añadir al Carrito</a>
                     </div>
                 </div>
@@ -511,7 +511,7 @@
                     <div class="product-info">
                         <h3>Rosa Eterna Blanca Pura</h3>
                         <p>Elegancia y pureza en su máxima expresión. Ideal para celebrar la inocencia y los nuevos comienzos.</p>
-                        <div class="price">$32.00</div>
+                        <div class="price">180 Bs</div>
                         <a href="#" class="add-to-cart">Añadir al Carrito</a>
                     </div>
                 </div>
@@ -521,7 +521,7 @@
                     <div class="product-info">
                         <h3>Rosa Eterna Rosada Delicada</h3>
                         <p>Un toque de dulzura y admiración. Ideal para expresar cariño y gratitud.</p>
-                        <div class="price">$30.00</div>
+                        <div class="price">50 Bs</div>
                         <a href="#" class="add-to-cart">Añadir al Carrito</a>
                     </div>
                 </div>
@@ -531,7 +531,7 @@
                     <div class="product-info">
                         <h3>Rosa Eterna Azul Misteriosa</h3>
                         <p>La rareza y el encanto de una flor de cuento de hadas. Para quienes aprecian lo único.</p>
-                        <div class="price">$40.00</div>
+                        <div class="price">190 Bs</div>
                         <a href="#" class="add-to-cart">Añadir al Carrito</a>
                     </div>
                 </div>
@@ -541,7 +541,7 @@
                     <div class="product-info">
                         <h3>Caja de 3 Rosas Mixtas</h3>
                         <p>Una combinación perfecta de colores para un regalo especial y significativo.</p>
-                        <div class="price">$95.00</div>
+                        <div class="price">100 Bs</div>
                         <a href="#" class="add-to-cart">Añadir al Carrito</a>
                     </div>
                 </div>
@@ -551,7 +551,7 @@
                     <div class="product-info">
                         <h3>Caja Corazón con Rosa Única</h3>
                         <p>Un detalle romántico y elegante presentado en una hermosa caja en forma de corazón.</p>
-                        <div class="price">$50.00</div>
+                        <div class="price">50 Bs</div>
                         <a href="#" class="add-to-cart">Añadir al Carrito</a>
                     </div>
                 </div>
@@ -585,7 +585,7 @@
                 </a>
             </div>
             <p style="margin-top: 20px;">Email: <a href="mailto:info@floresempresas.com" style="color: var(--color-secondary); text-decoration: none;">info@floresempresas.com</a></p>
-            <p>Teléfono: <a href="tel:+123456789" style="color: var(--color-secondary); text-decoration: none;">+123 456 789</a></p>
+            <p>Teléfono: <a href="tel:+123456789" style="color: var(--color-secondary); text-decoration: none;">+591 67295628</a></p>
         </section>
     </main>
 
@@ -633,3 +633,4 @@
     </script>
 </body>
 </html>
+
